<resources>
    <string name="app_name">COVID TRAVELLER</string>
    <string name="city1">PAIS DE ORIGEN</string>
    <string name="city2">PAIS DE DESTINO</string>
    <string name="botonmapa">VER EN EL MAPA</string>
    <string name="botonspecs">VER VUELOS</string>
    <string name="confirmar">CONFIRMAR SELECCION</string>
    <string name="home">IR A INICIO</string>
    <string name="botonubi">CLÍNICAS EN MI ZONA</string>
    <string name="botonmain">PLANEAR UN VIAJE</string>
    <string name="about">SOBRE EL AUTOR</string>
    <string name="nombre">JESÚS MANUEL PALOMO VEGA</string>
    <string name="datossobremi">Estudiante de Ingeniería Informática en la Universidad de Jaén (2016-2021)</string>
    <string name="email">Email: jmvp0005@red.ujaen.es</string>
    <string name="trip">TRIP</string>
    <string name="entrada">COVID TRAVELLER</string>
    <string name="entrada_">¿QUÉ QUIERES HACER?</string>
    <string name="pregunta">¿EN QUÉ PAIS TE ENCUENTRAS?</string>
    <string name="pregunta_">INGRESA UN PAIS</string>
    <string name="borders">FRONTERAS CRUZADAS:</string>
    <string name="borders_">Frontera de Eslovenia</string>
    <string name="distancia">DISTANCIA:</string>
    <string name="distancia_">1000 KM</string>
    <string name="restrictions">RESTRICCIONES</string>
    <string name="restrictions_">PCR test...</string>
    <string name="vuelos">VUELOS DISPONIBLES</string>
    <string name="switch_">Incluir destinos cercanos</string>
    <string name="fecha">FECHA</string>
    <string name="duracion">DURACION</string>
    <string name="ruta">RUTA</string>
    <string name="tipo">TIPO</string>
    <string name="escala">ESCALA</string>
    <string name="PRECIO">PRECIO</string>
    <string name="alerta">ALERTA COLOR</string>
    <string-array name="countries">
        <item>Albania</item>
        <item>Alemania</item>
        <item>Andorra</item>
        <item>Austria</item>
        <item>Belgica</item>
        <item>Bielorrusia</item>
        <item>Bosnia y Herzegovina</item>
        <item>Bulgaria</item>
        <item>Ciudad del Vaticano</item>
        <item>Croacia</item>
        <item>Dinamarca</item>
        <item>Eslovaquia</item>
        <item>Eslovenia</item>
        <item>España</item>
        <item>Estonia</item>
        <item>Finlandia</item>
        <item>Francia</item>
        <item>Grecia</item>
        <item>Hungria</item>
        <item>Italia</item>
        <item>Letonia</item>
        <item>Liechtenstein</item>
        <item>Lituania</item>
        <item>Luxemburgo</item>
        <item>Macedonia del Norte</item>
        <item>Moldavia</item>
        <item>Monaco</item>
        <item>Montenegro</item>
        <item>Noruega</item>
        <item>Paises Bajos</item>
        <item>Polonia</item>
        <item>Portugal</item>
        <item>Republica Checa</item>
        <item>Rumanía</item>
        <item>Rusia</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Suecia</item>
        <item>Suecia</item>
        <item>Suiza</item>
        <item>Ucrania</item>
    </string-array>
    <string name="title_activity_maps">Ruta de viaje</string>
    <string name="title_activity_vuelos">Opciones de vuelo</string>
    <string name="title_activity_specs">Detalles del viaje</string>
    <string name="title_activity_ubicacion">Clínicas cercanas</string>
    <string name="title_activity_main">Planear viaje</string>
    <string name="title_activity_about">Sobre mí</string>
</resources>