<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home_icono"
            android:title="@string/home"
            android:iconTint="@color/white"
            app:showAsAction="always"/>
        <item
            android:id="@+id/clinicas"
            android:icon="@drawable/clinica_icono"
            android:title="@string/botonubi"
            android:iconTint="@color/white"
            app:showAsAction="always"/>
        <item
            android:id="@+id/planearviaje"
            android:icon="@drawable/ic_travel_explore_white_24dp"
            android:title="@string/botonmain"
            android:iconTint="@color/white"
            app:showAsAction="always"/>
        <item
            android:id="@+id/about"
            android:icon="@drawable/persona"
            android:title="@string/about"
            android:iconTint="@color/white"
            app:showAsAction="always"/>

    </group>
</menu>