<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <AutoCompleteTextView
        android:id="@+id/pais"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:hint="@string/city1"
        android:fontFamily="@font/oswald_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <AutoCompleteTextView
        android:id="@+id/city2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:hint="@string/city2"
        android:fontFamily="@font/oswald_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pais"
        app:layout_constraintVertical_bias="0.229" />


    <Button
        android:id="@+id/avanzar"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:background="@drawable/botonredondo"
        android:fontFamily="@font/oswald_medium"
        android:onClick="botonSpecs"
        android:text="@string/botonspecs"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city2"
        app:layout_constraintVertical_bias="0.711" />

    <Button
        android:id="@+id/confirmar"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:background="@drawable/botonredondo"
        android:fontFamily="@font/oswald_medium"
        android:onClick="confirma"
        android:text="@string/confirmar"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city2"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="194dp"
        android:layout_height="29dp"
        android:fontFamily="@font/oswald_medium"
        android:gravity="center"
        android:text="@string/city1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="171dp"
        android:layout_height="28dp"
        android:fontFamily="@font/oswald_medium"
        android:gravity="center"
        android:text="@string/city2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/city2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

</androidx.constraintlayout.widget.ConstraintLayout>