<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompruebaUbicacion">

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="326dp"
        android:layout_height="34dp"
        android:fontFamily="@font/caveat_normal"
        android:gravity="center"
        android:text="@string/pregunta"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <AutoCompleteTextView
        android:id="@+id/pais"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:hint="@string/pregunta_"
        android:fontFamily="@font/caveat_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregunta"
        app:layout_constraintVertical_bias="0.217" />

    <Button
        android:id="@+id/avanzar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/botonredondo"
        android:fontFamily="@font/pm_normal"
        android:onClick="botonUbi"
        android:text="@string/botonubi"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pais"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/confirma"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/botonredondo"
        android:drawableTop="@drawable/lista_icono"
        android:onClick="confirma1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pais"
        app:layout_constraintTop_toBottomOf="@+id/pregunta"
        app:layout_constraintVertical_bias="0.209" />
</androidx.constraintlayout.widget.ConstraintLayout>