<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seleccion">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="346dp"
        android:layout_height="105dp"
        android:fontFamily="@font/caveat_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#092BE4"
        android:textSize="28sp"
        android:textStyle="bold"
        android:transitionName="textTrans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:transitionName="logoTrans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276"
        app:srcCompat="@drawable/logo_app" />

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="380dp"
        android:layout_height="54dp"
        android:fontFamily="@font/oswald_light"
        android:gravity="center"
        android:text="@string/entrada_"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/botonClinicas"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:background="@drawable/botonredondo"
        android:fontFamily="@font/oswald_medium"
        android:onClick="botonUbi"
        android:text="@string/botonubi"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/botonMain"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:background="@drawable/botonredondo"
        android:fontFamily="@font/oswald_medium"
        android:onClick="botonMain"
        android:text="@string/botonmain"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>